--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Kade Kyhos Resume</title>
+    <link rel="stylesheet" href="style.css" />
 </head><div class="contact-info">
       <h6>18818 Dylan Dr</h6>
       <h6>Farmington, MN 55024</h6>
