--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div>
         <h4>Skills</h4>
 
-         <p>Excellent people skills, critical thinker, great with time manegmant, Creative problem solver, interpersonal skills, I pride myself in my disipline, grit, logical thinking, teamwork, also have great leadership experience. </p>
+         <p>Excellent people skills, critical thinker, great with time managment, Creative problem solver, interpersonal skills, I pride myself in my disipline, grit, logical thinking, teamwork, also have great leadership experience. </p>
         
       </div>
         
@@ -24,7 +24,7 @@
           <p class="employer">North Central Healthcare, Wausau WI - Certified Nurses Assistant</p>
           <p>2011-2012</p>
           <ul>
-            <li>Specialized in Demential and Alsheimers</li>
+            <li>Specialized in Dementia and Alsheimers</li>
             <li>Cared for residents with level III Demential and Alsheimers</li>
             <li>Observed and reported physical and emotional changes of my residents during my time</li>
             <li>Assisted in Daily activities such as; daily hygiene, clothes, activities, helping, residents with their emotions and feelings</li>
