--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li>Specialized in Dementia and Alsheimers</li>
             <li>Cared for residents with level III Dementia and Alsheimers</li>
             <li>Observed and reported physical and emotional changes of my residents during my time</li>
-            <li>Assisted in Daily activities such as; daily hygiene, clothes, activities, helping, residents with their emotions and feelings</li>
+            <li>Assisted in Daily activities such as; daily hygiene, clothes, activities, helping residents with their emotions and feelings</li>
           </ul> 
           
           <p class="employer">Nooter Specialty construction - Journeyman Welder/Supervisor</p>
@@ -53,7 +53,7 @@
             <li>Operated the most advanced Semi - Autonomous Welding machines</li>
             <li>Worked in an extremely high stress environment while being safe and productive</li>
             <li>In charge of signaling cranes on critical picks during shutdowns</li>
-            <li>Worked with plant operations to safely remove used piping to avoid hazardous materials being spilled or exposed to environment or people</li>
+            <li>Worked with plant operations to safely remove used piping to avoid hazardous materials being spilled or exposing it to environment or people</li>
           </ul> 
           
 
@@ -74,7 +74,7 @@
           <p>2011-2012</p>
           <ul>
             <li>Obtained certificate for psychology</li>
-            <li>Received CNA license with almost perfect score on state board practical and written test</li>
+            <li>Received CNA license with almost perfect score on state board practical and written exam</li>
           </ul> 
 
           <p class="school">Local union 455 Steamfitter Apprenticeship - Journeyman License</p>
